src/components/Popularrepacks-01/Popularrepacks.css
body {
    margin: 0;
    padding: 0;
    font-family: 'IBMPlexSansRegular', sans-serif; 
  }




  /* NEWLY ADDED GAMES, FOCUS ON THIS FIRST.*/

  .popular-games {
    display: inline-grid;
    grid-auto-flow: column;
    grid-area: Popular-Repacks;
    gap: 2em;
    grid-auto-rows: 200px;
    overflow-x: auto;
    position: relative;
    
}
  .popular-games::-webkit-scrollbar {
    display: none; /* Hide the default scrollbar */
  }
  

  .games-container-pop {
    display: inline-flex;
    gap: inherit;
  }
  

  .popular-games img {
    display: block;
    cursor: pointer;
    border-radius: 18px;
    cursor: pointer;
  }
  .popular-games .slide:first-child img {
    height: 200px;
    filter: brightness(50%) opacity(1);
}
  
  .gamehub-unique-game-title {
    margin-top: 0.5rem;
    font-size: 1.2rem;
    cursor: pointer;
  }


  #first-game-title {
    top: 0;
    /* filter: brightness(0.5); */
    position: fixed;
    margin-left: 1em;
    margin-top: 8em;
    color: white;
    font-weight: 500;
    cursor: pointer;
  }

  #first-long-game-title {
    top: 0;
    filter: brightness(0.5);
    position: fixed;
    margin-left: 1em;
    margin-top: 11.5em;
    font-weight: 500;
    color: white;
    cursor: pointer;
  }
  
  #start-scroll-button {
    position: absolute; /* Position relative to the parent .popular-repacks */
    left: 0; /* Position at the left */
  }
  
  #end-scroll-button {
    position: absolute; /* Position relative to the parent .popular-repacks */
    right: 0; /* Position at the right */
  }

